--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -157,14 +157,76 @@ This endpoint retrieves all courses.
 
 `GET <%= config[:base_api_url] %>/courses`
 
-## Campus
+## Campuses
+
+### Entity documentation
 
 TODO
 
-## Subject
+## Subjects
 
-TODO
+### Entity documentation
 
-## Provider
+Parameter | Data type | Possible values | Description
+--------- | --------- | --------------- | -----------
+subject_code | Text | 2-character strings | 2-character subject codes
+subject_name | Text | |
 
-TODO
+### Get all providers
+
+```shell
+curl "<%= config[:base_api_url] %>/subjects"
+  -H "Authorization: Bearer your_api_key"
+```
+
+> The above command returns JSON structured like this:
+
+```json
+[
+  {
+    "subject_name": "Chinese",
+    "subject_code": "T1"
+  },
+  {
+    ...
+  }
+]
+```
+
+This endpoint retrieves all subjects.
+
+## Providers
+
+### Entity documentation
+
+Parameter | Data type | Possible values | Description
+--------- | --------- | --------------- | -----------
+institution_code | Text | 3-character strings | 3-character UCAS institution code
+institution_name | Text | | The institution's full-length marketing name
+institution_type | Text | "Y", "B", "0", "O", null | The type of institution (whether it's a university, lead school/teaching school alliance or a SCITT)
+accrediting_provider | Text | "Y" or "N" | Whether the provider can accredit courses or not
+
+### Get all providers
+
+```shell
+curl "<%= config[:base_api_url] %>/providers"
+  -H "Authorization: Bearer your_api_key"
+```
+
+> The above command returns JSON structured like this:
+
+```json
+[
+  {
+    "institution_code": "P60",
+    "institution_name": "University of Plymouth",
+    "institution_type": "Y",
+    "accrediting_provider": "Y"
+  },
+  {
+    ...
+  }
+]
+```
+
+This endpoint retrieves all institutions.
