Add placeholder entity docs for campuses and campus statuses

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -161,13 +161,23 @@ This endpoint retrieves all courses.
 
 ### Entity documentation
 
-TODO
+Parameter | Data type | Possible values | Description
+--------- | --------- | --------------- | -----------
+campus_code | Text | A-Z, 0-9, "-", "" | 1-character campus codes
+name | Text | |
 
 ## Campus statuses
 
 ### Entity documentation
 
-TODO
+Parameter | Data type | Possible values | Description
+--------- | --------- | --------------- | -----------
+campus_code | Text | A-Z, 0-9, "-", "" | 1-character campus codes
+name | Text | |
+vac_status | Text | |
+publish | Text | |
+status | Text | |
+course_open_date | ISO 8601 date/time string | |
 
 ## Subjects
 
