Fix course entity docs

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -84,7 +84,7 @@ maths | Integer | 1, 2, 3, 9 |
 science | Integer | 1, 2, 3, 9, null |
 campus_statuses | An array of campus statuses | | See the campus status entity documentation below
 subjects | An array of subjects | | See the subject entity documentation below
-provider | Provider | null or a provider entity | See the provider entity documentation below
+provider | Provider | A provider entity | See the provider entity documentation below
 accrediting_provider | Provider | null or a provider entity | See the provider entity documentation below
 
 ### Get all courses
