--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -68,6 +68,12 @@ Error Code | Meaning
 
 During a given recruitment cycle, there will be a period when providers have two sets of courses to manage – one set of courses that are currently published for the current recruitment cycle, and unpublished courses being preparated for the next recruitment cycle. Additionally, the providers who deliver next year's courses may change, and they may have different campuses for the same courses. The point in time when the overlap starts is referred to as rollover, and typically happens in or around May.
 
+To differentiate between entities from different recruitment cycles, each endpoint has a `<recruitment_cycle>` part in the URL. Additionally, the following entities have a `recruitment_cycle` attribute:
+
+- course
+- campus
+- campus status
+
 # Endpoints
 
 ## Courses
@@ -97,7 +103,7 @@ age_range | Text | "P", "S", "M", "O" | Age of students targeted by this course.
 ### Get all courses
 
 ```shell
-curl "<%= config[:base_api_url] %>/courses"
+curl "<%= config[:base_api_url] %>/2019/courses"
   -H "Authorization: Bearer your_api_key"
 ```
 
@@ -170,7 +176,13 @@ This endpoint retrieves all courses.
 
 #### HTTP Request
 
-`GET <%= config[:base_api_url] %>/courses`
+`GET <%= config[:base_api_url] %>/<recruitment_cycle>/courses`
+
+#### URL Parameters
+
+Parameter | Description
+--------- | -----------
+recruitment_cycle | 4-character year (e.g. 2019 for 2019/20 courses)
 
 ## Campuses
 
@@ -213,7 +225,7 @@ subject_name | Text | |
 ### Get all providers
 
 ```shell
-curl "<%= config[:base_api_url] %>/subjects"
+curl "<%= config[:base_api_url] %>/2019/subjects"
   -H "Authorization: Bearer your_api_key"
 ```
 
@@ -232,6 +244,16 @@ curl "<%= config[:base_api_url] %>/subjects"
 ```
 
 This endpoint retrieves all subjects.
+
+#### HTTP Request
+
+`GET <%= config[:base_api_url] %>/<recruitment_cycle>/subjects`
+
+#### URL Parameters
+
+Parameter | Description
+--------- | -----------
+recruitment_cycle | 4-character year (e.g. 2019 for 2019/20 courses)
 
 ## Providers
 
@@ -254,7 +276,7 @@ region_code | Text | 01 to 11 | 2-character string
 ### Get all providers
 
 ```shell
-curl "<%= config[:base_api_url] %>/providers"
+curl "<%= config[:base_api_url] %>/2019/providers"
   -H "Authorization: Bearer your_api_key"
 ```
 
@@ -289,3 +311,13 @@ curl "<%= config[:base_api_url] %>/providers"
 ```
 
 This endpoint retrieves all institutions.
+
+#### HTTP Request
+
+`GET <%= config[:base_api_url] %>/<recruitment_cycle>/providers`
+
+#### URL Parameters
+
+Parameter | Description
+--------- | -----------
+recruitment_cycle | 4-character year (e.g. 2019 for 2019/20 courses)
