--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -222,7 +222,7 @@ Parameter | Data type | Possible values | Description
 subject_code | Text | 2-character strings | 2-character subject codes
 subject_name | Text | |
 
-### Get all providers
+### Get all subjects
 
 ```shell
 curl "<%= config[:base_api_url] %>/2019/subjects"
