--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -357,3 +357,30 @@ This endpoint retrieves all institutions.
 Parameter | Description
 --------- | -----------
 recruitment_cycle | 4-character year (e.g. 2019 for 2019/20 courses)
+
+### Get all changed providers
+
+This endpoint retrieves all providers changed since midnight UTC of the specified day.
+
+The returned results:
+
+- match the structure of the [Get all providers](#get-all-providers) endpoint
+- are sorted chronologically with the oldest update first
+- are paginated with a page size of 1000 (see the [pagination section](#pagination) for info about navigating pages)
+
+A provider is marked as changed (and hence included in this endpoint) if:
+
+- the provider itself has been changed (including contact data changes)
+- any of the associated campuses has changed
+- campus associations have changed
+
+#### HTTP Request
+
+`GET <%= config[:base_api_url] %>/<recruitment_cycle>/providers?changed_since=<YYYYMMDD>`
+
+#### URL Parameters
+
+Parameter | Description
+--------- | -----------
+recruitment_cycle | 4-character year (e.g. 2019 for 2019/20 courses)
+changed_since | Day in YYYYMMDD format
