--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -135,7 +135,7 @@ a timestamp of the last API requests.
 
 
 The response headers will include information related to continuing to retrieve
-changed records either immediately, or when ready to injest more records.
+changed records either immediately, or when ready to ingest more records.
 
 | Header       | Description                                                                                    |
 |--------------|------------------------------------------------------------------------------------------------|
